--- a/css/main.css
+++ b/css/main.css
@@ -251,6 +251,8 @@ main {
     position: absolute;
     inset: 0;
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
     padding: 1em;
     text-align: center;
@@ -266,7 +268,6 @@ main {
 .card__title {
     font-family: Cinzel Decorative, serif;
     padding-bottom: .5em;
-    margin-top: auto;
     font-size: 1.25rem;
 }
 
