--- a/css/main.css
+++ b/css/main.css
@@ -66,6 +66,10 @@ main {
     transform: scale(1.1);
 }
 
+.mobile-nav-toggle {
+    display: none;
+}
+
 .nav__list {
     display: flex;
     gap: 2em;
@@ -367,6 +371,46 @@ main {
 
     .header {
         padding: 1em 2rem;
+    }
+
+    .logo {
+        font-size: 1.5rem;
+    }
+
+    .mobile-nav-toggle {
+        position: absolute;
+        z-index: 999999;
+        top: 1rem;
+        right: 2rem;
+        display: block;
+        width: 2.5rem;
+        padding: .5em;
+        border: none;
+        aspect-ratio: 1;
+        background-image: url('../assets/menu.svg');
+        background-repeat: no-repeat;
+        background-color: transparent;
+    }
+    
+    .mobile-nav-toggle[aria-expanded="true"] {
+        background-image: url('../assets/menu-close.svg');
+    }
+
+    .nav__list {
+        position: fixed;
+        z-index: 10000;
+        inset: 4rem 0 0 30%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        padding: min(20vh, 8rem) 0;
+        background: rgba(0, 0, 0, .95);
+        transform: translateX(100%);
+        transition: transform 300ms ease-in-out;
+    }
+
+    .nav__list[data-visible="true"] {
+        transform: translateX(0%);
     }
 
     .home-container {
