--- a/templates/movies.html
+++ b/templates/movies.html
@@ -25,10 +25,10 @@
             <a href="../index.html">mindUnleashed</a>
         </div>
         
-        <!-- <button class="mobile-nav-toggle" aria-controls="nav__list" aria-expanded="false" aria-label="menu"></button> -->
+        <button class="mobile-nav-toggle" aria-controls="nav__list" aria-expanded="false" aria-label="menu"></button>
         
         <nav class="nav contact__nav">
-            <ul class="nav__list">
+            <ul class="nav__list" id="nav__list" class="nav__list" data-visible="false">
                 <li class="nav__item"><a class="nav__link" href="../index.html">Home</a></li>
                 <li class="nav__item active"><a class="nav__link" href="#">Movies</a></li>
                 <li class="nav__item"><a class="nav__link" href="./shows.html">TV Shows</a></li>
@@ -53,5 +53,6 @@
     <footer class="footer">Created by Jovana Raskovic &copy; 2021 <span>mindUnleashed</span><p>Source:<img src="../assets/tmdb.svg" alt="TMDB logo"></p></footer>
 
     <script src="../src/getMovies.js"></script>
+    <script src="../src/nav.js"></script>
 </body>
 </html>
